# rustychains

./: .gitignore  Cargo.toml  Readme.md  build.rs
rustychains_dylib/: Cargo.toml
rustychains_dylib/src/: lib.rs  static_manager.rs  stream.rs
rustychains_dylib/src/net/: mod.rs  socket_addr.rs
rustychains_dylib/src/os/: libc_error.rs  mod.rs
rustychains_dylib/src/os/darwin/: darwin.rs  interpose_macro.rs  mod.rs  rewrites.rs
rustychains_dylib/src/os/darwin/debug/: _interpose_all_.rs  generate_interpose_all.py  interpose_all.rs  mod.rs
rustychains_dylib/src/proxy_protocol/: __test_count_bytes.rs  mod.rs  socks4.rs  socks5.rs
rustychains_shared/: Cargo.toml
rustychains_shared/src/: config.rs  lib.rs  message.rs
rustychains_shared/src/os/: darwin.rs  mod.rs
src/: child_process.rs  lib.rs  main.rs
tests/: tests.rs
tests/go_tcp/: mod.rs
tests/go_tcp/go_tcp_client/: go.mod  go_tcp_client  main.go
tests/go_tcp/go_tcp_server/: go.mod  main.go
