[package]
name = "rustychains_dylib"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[lib]
name = "rustychains_dylib"
crate_type = ["dylib"]

[dependencies]
ctor = "0.2.4"
interprocess = "1.2.1"
libc = "0.2.147"
lockfree = "0.5.1"
once_cell = "1.18.0"
bincode = "1.3.3"
lazy_static = "1.4.0"


rustychains_shared = { path = "./../rustychains_shared" }
